--- a/ProjectCDTT_63132701/Views/san_pham/QLSP.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/QLSP.cshtml
@@ -9,9 +9,9 @@
 </head>
 
 <h2>Danh sách sản phẩm hàng</h2>
-@*<p>
-    @Html.ActionLink("Thêm khách hàng", "Create", null, new { @class = "btn btn-success" })
-</p>*@
+<p>
+    @Html.ActionLink("Thêm Sản Phẩm", "Create", null, new { @class = "btn btn-success" })
+</p>
 
 <table class="table table-bordered">
     <thead>
