--- a/ProjectCDTT_63132701/Views/san_pham/Edit.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/Edit.cshtml
@@ -1,94 +1,96 @@
 ﻿@model ProjectCDTT_63132701.Models.SanPham
 
 @{
-    ViewBag.Title = "Edit";
-    Layout = "~/Views/shared/_LayoutAdmin.cshtml";
+    ViewBag.Title = "Chỉnh sửa sản phẩm";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Edit</h2>
+<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/Content/create.css" />
+</head>
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>san_pham</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.id)
+<div class=" form-wrapper">
+    <a href="@Url.Action("Index")" class="back-button">
+        <i class="fa fa-chevron-left"></i> Quay lại
+    </a>
+    <h2 class="mb-4">Chỉnh sửa sản phẩm</h2>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ten_san_pham, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ten_san_pham, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ten_san_pham, "", new { @class = "text-danger" })
+    @using (Html.BeginForm("Edit", "SanPham", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    {
+        @Html.AntiForgeryToken()
+        @Html.HiddenFor(model => model.MaSP)
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="mb-3">
+                    @Html.LabelFor(model => model.TenSP, new { @class = "form-label" })
+                    @Html.TextBoxFor(model => model.TenSP, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.TenSP, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="mb-3">
+                    @Html.LabelFor(model => model.MoTa, new { @class = "form-label" })
+                    @Html.TextAreaFor(model => model.MoTa, new { @class = "form-control", rows = 3 })
+                    @Html.ValidationMessageFor(model => model.MoTa, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="mb-3">
+                    @Html.LabelFor(model => model.DonGia, new { @class = "form-label" })
+                    @Html.TextBoxFor(model => model.DonGia, new { @class = "form-control", type = "number", step = "0.01" })
+                    @Html.ValidationMessageFor(model => model.DonGia, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="mb-3">
+                    @Html.LabelFor(model => model.SoLuong, new { @class = "form-label" })
+                    @Html.TextBoxFor(model => model.SoLuong, new { @class = "form-control", type = "number" })
+                    @Html.ValidationMessageFor(model => model.SoLuong, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="form-group radio-group">
+                    @Html.Label("Loại bạc :")
+                    <label>
+                        @Html.RadioButtonFor(m => m.LoaiBac, "Italy") Italy
+                    </label>
+                    <label>
+                        @Html.RadioButtonFor(m => m.LoaiBac, "Thailand") Thailand
+                    </label>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="mb-3">
+                    @Html.LabelFor(model => model.MaLoaiSP, "Loại sản phẩm", new { @class = "form-label" })
+                    @Html.DropDownList("MaLoaiSP", ViewBag.MaLoaiSP as SelectList, "Chọn danh mục", new { @class = "form-select" })
+                    @Html.ValidationMessageFor(model => model.MaLoaiSP, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="mb-3">
+                    @Html.Label("Ảnh sản phẩm", new { @class = "form-label" })
+                    <input type="file" name="upload" class="form-control" />
+                    @if (!string.IsNullOrEmpty(Model.AnhSanPham))
+                    {
+                        <p class="mt-2">Ảnh hiện tại:</p>
+                        <img src="~/images/@Model.AnhSanPham" alt="Ảnh sản phẩm" class="img-thumbnail" style="max-height: 200px;" />
+                    }
+                </div>
+
+                @*<div class="mb-3">
+                        @Html.LabelFor(model => model.NgayTao, new { @class = "form-label" })
+                        @Html.TextBoxFor(model => model.NgayTao, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
+                    </div>*@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.mo_ta, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.mo_ta, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.mo_ta, "", new { @class = "text-danger" })
+        <div class="text-center mt-4">
+            <div class="d-inline-flex gap-2">
+                <input type="submit" value="Thêm sản phẩm" class=" btn-submit" />
+                @Html.ActionLink("Hủy", "Index", null, new { @class = " btn-cancel text-decoration-none" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.gia, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.gia, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.gia, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.so_luong, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.so_luong, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.so_luong, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.id_danh_muc, "id_danh_muc", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("id_danh_muc", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.id_danh_muc, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.anh_san_pham, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.anh_san_pham, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.anh_san_pham, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.loai_bac, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.loai_bac, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.loai_bac, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ngay_tao, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ngay_tao, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ngay_tao, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
+    }
 </div>
