--- a/ProjectCDTT_63132701/Content/login.css
+++ b/ProjectCDTT_63132701/Content/login.css
@@ -36,7 +36,7 @@ label {
 
 /* ====== NÚT ĐĂNG NHẬP ====== */
 .btn-login {
-    background-color: #ed8383 !important;
+    background-color: #F7858F !important;
     color: white !important;
     border: none;
     padding: 8px 12px; 
