--- a/ProjectCDTT_63132701/Content/create.css
+++ b/ProjectCDTT_63132701/Content/create.css
@@ -42,6 +42,7 @@ body {
 
 .form-row {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 40px;
     margin-bottom: 20px;
@@ -91,7 +92,7 @@ body {
     display: block;
     margin: 30px auto 0;
     padding: 12px 40px;
-    background-color: #ED8383;
+    background-color: #F7858F;
     border: none;
     border-radius: 15px;
     color: white;
@@ -101,7 +102,7 @@ body {
 }
 
     .btn-submit:hover {
-        background-color: #ED8383;
+        background-color: #F7858F;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     }
 .btn-cancel {
