--- a/ProjectCDTT_63132701/Content/dichvu.css
+++ b/ProjectCDTT_63132701/Content/dichvu.css
@@ -27,7 +27,7 @@ th, td {
 }
 
 th {
-    background: #ed8383;
+    background: #F7858F;
     color: white;
     font-size: 16px;
     font-weight: bold;
