--- a/ProjectCDTT_63132701/Content/yeuthich.css
+++ b/ProjectCDTT_63132701/Content/yeuthich.css
@@ -101,9 +101,9 @@ h2 {
 }
 
 .btn-add-to-cart {
-    color: #ED8383;
+    color: #F7858F;
     background-color: transparent;
-    border: 1px solid #ED8383;
+    border: 1px solid #F7858F;
     border-radius: 4px;
     padding: 8px 16px;
     font-size: 14px;
@@ -116,12 +116,12 @@ h2 {
     /* Không đổi màu khi hover */
     .btn-add-to-cart:hover {
         background-color: transparent;
-        color: #ED8383;
-        border-color: #ED8383;
+        color: #F7858F;
+        border-color: #F7858F;
     }
 
     .btn-add-to-cart i {
-        color: #ED8383;
+        color: #F7858F;
     }
 
 
