--- a/ProjectCDTT_63132701/Views/san_pham/Delete.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/Delete.cshtml
@@ -2,88 +2,55 @@
 
 @{
     ViewBag.Title = "Delete";
-    Layout = "~/Views/shared/_LayoutAdmin.cshtml";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
+<head>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/Content/details.css" />
+</head>
 
-<h2>Delete</h2>
+<div class="form-wrapper">
+    <a href="javascript:history.back()" class="back-button">
+        <i class="fa-solid fa-chevron-left"></i> Quay lại
+    </a>
+    <h2 class="mb-4">Bạn có chắc chắn muốn xóa sản phẩm này?</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>san_pham</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.ten_san_pham)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ten_san_pham)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.mo_ta)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.mo_ta)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.gia)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.gia)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.so_luong)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.so_luong)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.anh_san_pham)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.anh_san_pham)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.loai_bac)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.loai_bac)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ngay_tao)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ngay_tao)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.danh_muc.ten_danh_muc)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.danh_muc.ten_danh_muc)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+    <div class="row">
+        <!-- Ảnh sản phẩm -->
+        <div class="col-md-5">
+            <img src="~/Content/images/@Model.AnhSanPham" alt="Ảnh sản phẩm" class="img-fluid rounded shadow" style="max-height: 300px;" />
         </div>
-    }
+
+        <!-- Thông tin sản phẩm -->
+        <div class="col-md-7">
+            <dl class="row">
+                <dt class="col-sm-4">Tên sản phẩm:</dt>
+                <dd class="col-sm-8">@Model.TenSP</dd>
+
+                <dt class="col-sm-4">Loại bạc:</dt>
+                <dd class="col-sm-8">@Model.LoaiBac</dd>
+
+                <dt class="col-sm-4">Đơn giá:</dt>
+                <dd class="col-sm-8">@Model.DonGia.ToString("N0") VNĐ</dd>
+
+                <dt class="col-sm-4">Số lượng:</dt>
+                <dd class="col-sm-8">@Model.SoLuong</dd>
+
+                <dt class="col-sm-4">Loại sản phẩm:</dt>
+                <dd class="col-sm-8">@Model.LoaiSanPham.TenLoaiSP</dd>
+            </dl>
+            @using (Html.BeginForm("Delete", "san_pham", FormMethod.Post))
+            {
+                @Html.AntiForgeryToken()
+                @Html.HiddenFor(model => model.MaSP)
+
+                <button type="submit" class="btn-submit mt-3 me-2">
+                    <i class="fas fa-trash-alt"></i> Xóa
+                </button>
+                <a href="@Url.Action("QLSP", "san_pham")" class="btn-cancel mt-3">
+                    Hủy
+                </a>
+            }
+        </div>
+    </div>
 </div>
