--- a/ProjectCDTT_63132701/Views/san_pham/DichVu.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/DichVu.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "DichVu";
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
@@ -8,12 +7,11 @@
     <!-- Thư viện CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="~/css/style.css">
+    <link rel="stylesheet" href="~/css/Style.css">
     <link rel="stylesheet" href="~/Content/dichvu.css" />
     <!-- Bootstrap JS và jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
 
 </head>
 
