--- a/ProjectCDTT_63132701/Views/san_pham/Edit.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/Edit.cshtml
@@ -16,7 +16,7 @@
     </a>
     <h2 class="mb-4">Chỉnh sửa sản phẩm</h2>
 
-    @using (Html.BeginForm("Edit", "SanPham", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    @using (Html.BeginForm("Edit", "san_pham", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
         @Html.HiddenFor(model => model.MaSP)
@@ -37,13 +37,13 @@
 
                 <div class="mb-3">
                     @Html.LabelFor(model => model.DonGia, new { @class = "form-label" })
-                    @Html.TextBoxFor(model => model.DonGia, new { @class = "form-control", type = "number", step = "0.01" })
+                    @Html.TextBoxFor(m => m.DonGia, new { @class = "form-control", type = "number", min = "50000", step = "10000" })
                     @Html.ValidationMessageFor(model => model.DonGia, "", new { @class = "text-danger" })
                 </div>
 
                 <div class="mb-3">
                     @Html.LabelFor(model => model.SoLuong, new { @class = "form-label" })
-                    @Html.TextBoxFor(model => model.SoLuong, new { @class = "form-control", type = "number" })
+                    @Html.TextBoxFor(m => m.SoLuong, new { @class = "form-control", @type = "number", @min = "1", @id = "SoLuong" })
                     @Html.ValidationMessageFor(model => model.SoLuong, "", new { @class = "text-danger" })
                 </div>
 
@@ -61,13 +61,13 @@
             <div class="col-md-6">
                 <div class="mb-3">
                     @Html.LabelFor(model => model.MaLoaiSP, "Loại sản phẩm", new { @class = "form-label" })
-                    @Html.DropDownList("MaLoaiSP", ViewBag.MaLoaiSP as SelectList, "Chọn danh mục", new { @class = "form-select" })
+                    @Html.DropDownListFor(model => model.MaLoaiSP, ViewBag.MaLoaiSP as SelectList, "Chọn danh mục", new { @class = "form-select" })
                     @Html.ValidationMessageFor(model => model.MaLoaiSP, "", new { @class = "text-danger" })
                 </div>
 
                 <div class="mb-3">
                     @Html.Label("Ảnh sản phẩm", new { @class = "form-label" })
-                    <input type="file" name="upload" class="form-control" />
+                    <input type="file" name="AnhSanPhamUpload" class="form-control" />
                     @if (!string.IsNullOrEmpty(Model.AnhSanPham))
                     {
                         <p class="mt-2">Ảnh hiện tại:</p>
@@ -84,13 +84,27 @@
 
         <div class="text-center mt-4">
             <div class="d-inline-flex gap-2">
-                <input type="submit" value="Thêm sản phẩm" class=" btn-submit" />
-                @Html.ActionLink("Hủy", "Index", null, new { @class = " btn-cancel text-decoration-none" })
+                <input type="submit" value="Lưu sản phẩm" class=" btn-submit" />
+                @Html.ActionLink("Hủy", "QLSP", null, new { @class = " btn-cancel text-decoration-none" })
             </div>
         </div>
-
-
-
-
     }
 </div>
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const donGiaInput = document.getElementById("DonGia");
+        const soLuongInput = document.getElementById("SoLuong");
+
+        if (donGiaInput) {
+            donGiaInput.addEventListener("input", function () {
+                this.value = this.value.replace(/[^0-9]/g, "");
+            });
+        }
+
+        if (soLuongInput) {
+            soLuongInput.addEventListener("input", function () {
+                this.value = this.value.replace(/[^0-9]/g, "");
+            });
+        }
+    });
+</script>
