--- a/ProjectCDTT_63132701/Views/Van_chuyen/QLVC.cshtml
+++ b/ProjectCDTT_63132701/Views/Van_chuyen/QLVC.cshtml
@@ -9,35 +9,29 @@
 </head>
 
 <h2>Danh sách vận chuyển</h2>
-@*<p>
+    <p>
         @Html.ActionLink("Thêm đơn vận chuyển", "Create", null, new { @class = "btn btn-success" })
-    </p>*@
+    </p>
 
 <table class="table table-bordered">
     <thead>
         <tr>
-            <th>Mã đơn hàng</th>
+            <th>Tỉnh thành</th>
+            <th>Quận huyện</th>
+            <th>Phường xã</th>
             <th>Đơn vị vận chuyển</th>
-            <th>Trạng thái</th>
-            <th>Ngày tạo</th>
-            <th>Ngày giao</th>
-            <th>Ngày nhận</th>
-            <th></th>
+            <th>Tổng tiền</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
             <tr>
-                <td>@Html.DisplayFor(modelItem => item.MaDH)</td>
+                <td>@Html.DisplayFor(modelItem => item.TinhThanh)</td>
+                <td>@Html.DisplayFor(modelItem => item.QuanHuyen)</td>
+                <td>@Html.DisplayFor(modelItem => item.PhuongXa)</td>
                 <td>@Html.DisplayFor(modelItem => item.DonViVanChuyen)</td>
-                <td>@Html.DisplayFor(modelItem => item.TrangThai)</td>
-                <td>@Html.DisplayFor(modelItem => item.NgayTao)</td>
-@*                <td>@Html.DisplayFor(modelItem => item.ngay_giao)</td>
-                <td>@Html.DisplayFor(modelItem => item.ngay_nhan)</td>*@
-               @* <td>
-                    <a href="@Url.Action("ChiTietHoaDon", "SanPhams_64130053", new { id = hoaDon.SoHD })"><i class="fa-solid fa-circle-info"></i></a>
-                </td>*@
+                <td>@Html.DisplayFor(modelItem => item.GiaVanChuyen)</td>
                 <td>
                     <a href="@Url.Action("Details", new { id = item.MaDH })" class="btn btn-info btn-sm">
                         <i class="fas fa-eye"></i>
