--- a/ProjectCDTT_63132701/Views/san_pham/Edit.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/Edit.cshtml
@@ -11,8 +11,8 @@
 </head>
 
 <div class=" form-wrapper">
-    <a href="@Url.Action("Index")" class="back-button">
-        <i class="fa fa-chevron-left"></i> Quay lại
+    <a href="javascript:history.back()" class="back-button">
+        <i class="fa-solid fa-chevron-left"></i> Quay lại
     </a>
     <h2 class="mb-4">Chỉnh sửa sản phẩm</h2>
 
@@ -24,25 +24,25 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="mb-3">
-                    @Html.LabelFor(model => model.TenSP, new { @class = "form-label" })
+                    @Html.LabelFor(model => model.TenSP, "Tên sản phẩm", new { @class = "form-label" })
                     @Html.TextBoxFor(model => model.TenSP, new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.TenSP, "", new { @class = "text-danger" })
                 </div>
 
                 <div class="mb-3">
-                    @Html.LabelFor(model => model.MoTa, new { @class = "form-label" })
+                    @Html.LabelFor(model => model.MoTa, "Mô tả", new { @class = "form-label" })
                     @Html.TextAreaFor(model => model.MoTa, new { @class = "form-control", rows = 3 })
                     @Html.ValidationMessageFor(model => model.MoTa, "", new { @class = "text-danger" })
                 </div>
 
                 <div class="mb-3">
-                    @Html.LabelFor(model => model.DonGia, new { @class = "form-label" })
+                    @Html.LabelFor(model => model.DonGia, "Đơn giá", new { @class = "form-label" })
                     @Html.TextBoxFor(m => m.DonGia, new { @class = "form-control", type = "number", min = "50000", step = "10000" })
                     @Html.ValidationMessageFor(model => model.DonGia, "", new { @class = "text-danger" })
                 </div>
 
                 <div class="mb-3">
-                    @Html.LabelFor(model => model.SoLuong, new { @class = "form-label" })
+                    @Html.LabelFor(model => model.SoLuong, "Số lượng", new { @class = "form-label" })
                     @Html.TextBoxFor(m => m.SoLuong, new { @class = "form-control", @type = "number", @min = "1", @id = "SoLuong" })
                     @Html.ValidationMessageFor(model => model.SoLuong, "", new { @class = "text-danger" })
                 </div>
