--- a/ProjectCDTT_63132701/Views/van_chuyen/Create.cshtml
+++ b/ProjectCDTT_63132701/Views/van_chuyen/Create.cshtml
@@ -1,81 +1,111 @@
 ﻿@model ProjectCDTT_63132701.Models.VanChuyen
 
 @{
-    ViewBag.Title = "Create";
-    Layout = "~/Views/shared/_LayoutAdmin.cshtml";
+    ViewBag.Title = "Tạo đơn vận chuyển";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Create Shipping</h2>
 
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>VanChuyen</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.MaDH, "MaDH", htmlAttributes: new { @class = "control-label col-md-2" })
+            <label>Tỉnh thành phố</label>
+            <select id="tinhThanh" class="form-control"></select>
+        </div>
+        <div class="form-group">
+            <label>Quận huyện</label>
+            <select id="quanHuyen" class="form-control"></select>
+        </div>
+        <div class="form-group">
+            <label>Phường xã</label>
+            <select id="phuongXa" class="form-control"></select>
+        </div>
+
+        <input type="hidden" name="TinhThanh" id="inputTinhThanh" />
+        <input type="hidden" name="QuanHuyen" id="inputQuanHuyen" />
+        <input type="hidden" name="PhuongXa" id="inputPhuongXa" />
+
+
+
+
+        <div class="form-group">
+            @Html.Label("Đơn vị vận chuyển", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("MaDH", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.MaDH, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.DonViVanChuyen, (SelectList)ViewBag.DonViVanChuyenList, "-- Chọn đơn vị --", new { @class = "form-control" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DonViVanChuyen, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.GiaVanChuyen, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DonViVanChuyen, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DonViVanChuyen, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.TrangThai, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TrangThai, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TrangThai, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.NgayTao, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.NgayTao, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.NgayTao, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ThoiGianGiao, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ThoiGianGiao, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ThoiGianGiao, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ThoiGianNhan, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ThoiGianNhan, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ThoiGianNhan, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(model => model.GiaVanChuyen, new { @class = "form-control", placeholder = "vd: 20000" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-warning" />
             </div>
         </div>
     </div>
 }
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+<script>
+    $(document).ready(function () {
+        $.getJSON("https://provinces.open-api.vn/api/", function (provinces) {
+            $('#tinhThanh').append('<option value="">-- Chọn Tỉnh/Thành --</option>');
+            provinces.forEach(function (province) {
+                $('#tinhThanh').append(
+                    `<option value="${province.code}" data-name="${province.name}">${province.name}</option>`
+                );
+            });
+        });
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+        $('#tinhThanh').on('change', function () {
+            const provinceCode = $(this).val();
+            const provinceName = $('#tinhThanh option:selected').data('name');
+            $('#inputTinhThanh').val(provinceName);
+
+            $('#quanHuyen').empty().append('<option value="">-- Chọn Quận/Huyện --</option>');
+            $('#phuongXa').empty().append('<option value="">-- Chọn Phường/Xã --</option>');
+
+            if (provinceCode) {
+                $.getJSON(`https://provinces.open-api.vn/api/p/${provinceCode}?depth=2`, function (province) {
+                    province.districts.forEach(function (district) {
+                        $('#quanHuyen').append(
+                            `<option value="${district.code}" data-name="${district.name}">${district.name}</option>`
+                        );
+                    });
+                });
+            }
+        });
+
+        $('#quanHuyen').on('change', function () {
+            const districtCode = $(this).val();
+            const districtName = $('#quanHuyen option:selected').data('name');
+            $('#inputQuanHuyen').val(districtName);
+
+            $('#phuongXa').empty().append('<option value="">-- Chọn Phường/Xã --</option>');
+
+            if (districtCode) {
+                $.getJSON(`https://provinces.open-api.vn/api/d/${districtCode}?depth=2`, function (district) {
+                    district.wards.forEach(function (ward) {
+                        $('#phuongXa').append(
+                            `<option value="${ward.code}" data-name="${ward.name}">${ward.name}</option>`
+                        );
+                    });
+                });
+            }
+        });
+
+        $('#phuongXa').on('change', function () {
+            const wardName = $('#phuongXa option:selected').data('name');
+            $('#inputPhuongXa').val(wardName);
+        });
+    });
+</script>
