--- a/ProjectCDTT_63132701/Views/don_hang/Details.cshtml
+++ b/ProjectCDTT_63132701/Views/don_hang/Details.cshtml
@@ -11,57 +11,35 @@
     <h4>DonHang</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.TongTien)
-        </dt>
+        <dt>@Html.DisplayNameFor(model => model.TongTien)</dt>
+        <dd>@Html.DisplayFor(model => model.TongTien)</dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.TongTien)
-        </dd>
+        <dt>@Html.DisplayNameFor(model => model.TrangThai)</dt>
+        <dd>@Html.DisplayFor(model => model.TrangThai)</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.TrangThai)
-        </dt>
+        <dt>@Html.DisplayNameFor(model => model.NgayTao)</dt>
+        <dd>@Html.DisplayFor(model => model.NgayTao)</dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.TrangThai)
-        </dd>
+        <dt>@Html.DisplayNameFor(model => model.MaVanDon)</dt>
+        <dd>@Html.DisplayFor(model => model.MaVanDon)</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.NgayTao)
-        </dt>
+        <dt>@Html.DisplayNameFor(model => model.KhachHang.HoTen)</dt>
+        <dd>@Html.DisplayFor(model => model.KhachHang.HoTen)</dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.NgayTao)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.MaVanDon)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.MaVanDon)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.KhachHang.HoTen)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.KhachHang.HoTen)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.HoaDon.TrangThai)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.HoaDon.TrangThai)
-        </dd>
-
+        <dt>@Html.DisplayNameFor(model => model.HoaDon.TrangThai)</dt>
+        <dd>@Html.DisplayFor(model => model.HoaDon.TrangThai)</dd>
     </dl>
 </div>
+
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.MaDH }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
+
+<!-- Button to approve order and move to shipping -->
+@using (Html.BeginForm("DuyetDonHang", "DonHang", FormMethod.Post))
+{
+    @Html.AntiForgeryToken()
+    <input type="hidden" name="id" value="@Model.MaDH" />
+    <button type="submit" class="btn btn-success">Duyệt Đơn Hàng</button>
+}
