--- a/ProjectCDTT_63132701/Views/khach_hang/QLKH.cshtml
+++ b/ProjectCDTT_63132701/Views/khach_hang/QLKH.cshtml
@@ -6,11 +6,12 @@
 
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="~/Content/qlsp.css" />
 </head>
 
 <h2>Danh sách khách hàng</h2>
 <p>
-    @Html.ActionLink("Thêm khách hàng", "Create", null, new { @class = "btn btn-success" })
+    @Html.ActionLink("Thêm khách hàng", "Create", null, new { @class = "btn-submit" })
 </p>
 
 <table class="table table-bordered">
