--- a/ProjectCDTT_63132701/Views/san_pham/DichVu.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/DichVu.cshtml
@@ -91,7 +91,7 @@
         <h3>LƯU Ý:</h3>
         <ul>
             <li>Thời gian sửa chữa: 3 - 5 ngày làm việc (Nhẫn thay đai, sản phẩm thêm chi tiết 7 ngày làm việc).</li>
-            <li>Đối với các hoạt động bảo hành, Huy Thanh áp dụng bảo hành điện tử bằng việc tra cứu thông tin trên hệ thống phần mềm.</li>
+            <li>Đối với các hoạt động bảo hành, Kim Yến áp dụng bảo hành điện tử bằng việc tra cứu thông tin trên hệ thống phần mềm.</li>
             <li>Các dịch vụ bảo hành, sửa chữa sản phẩm (làm mới, chỉnh size,...) có thể giảm về trọng lượng so với ban đầu do bị hao mòn trong thời gian sử dụng và quy trình làm mới sản phẩm (<span class="highlight">Hạn mức hao mòn: 6%</span>).</li>
             <li>bạc là kim loại mềm, dễ bị xước và không hình dạng khi đeo trong thời gian dài. Vui lòng không đeo trang sức trong lúc hoạt động mạnh và bê vác.</li>
         </ul>
