--- a/ProjectCDTT_63132701/Content/details.css
+++ b/ProjectCDTT_63132701/Content/details.css
@@ -27,29 +27,33 @@
 }
 
 .btn-submit {
+    margin-left: 210px;
     background-color: #F7858F;
     color: white;
     border: none;
     padding: 8px 20px;
     border-radius: 8px;
     transition: background-color 0.3s ease;
+    margin-bottom: 70px;
 }
 
     .btn-submit:hover {
         background-color: #e06c78;
+        color: white;
     }
 
 .btn-cancel {
-    background-color: #B0BEC5;
+    margin-right: 290px;
+    background-color: #b0bec5;
     color: white;
+    border: none;
     padding: 8px 20px;
+    white-space: nowrap;
     border-radius: 8px;
-    text-decoration: none;
-    display: inline-block;
     transition: background-color 0.3s ease;
+    margin-bottom: 70px;
 }
 
     .btn-cancel:hover {
-        background-color: #90A4AE;
-        color: white;
-    }
+        background-color: #90a4ae;
+        color: white;    }
