--- a/ProjectCDTT_63132701/Content/giohang.css
+++ b/ProjectCDTT_63132701/Content/giohang.css
@@ -26,7 +26,8 @@ h2 {
 .cart-main-layout {
     display: flex;
     flex-wrap: wrap;
-    gap: 40px;
+    gap: 90px;
+    margin-bottom: 80px;
 }
 
 .cart-left {
@@ -35,7 +36,7 @@ h2 {
 }
 
 .cart-right {
-    width: 300px;
+    width: 600px;
     margin-left: auto;
     align-self: flex-start;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -92,7 +93,22 @@ h2 {
     color: #000;
     margin-top: 80px;
 }
+.form-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
 
+.form-group {
+    flex: 1 1 45%; 
+    min-width: 250px;
+}
+
+.form-group label,
+.form-group input,
+.form-group select {
+    width: 100%;
+}
 
 /* Nút xóa */
 .btn-remove {
@@ -123,18 +139,18 @@ h2 {
     color: #1d1d1f;
 }
 
-    .summary-row .label {
-        font-weight: 500;
-    }
+.summary-row .label {
+    font-weight: 500;
+}
 
-    .summary-row .value {
-        font-weight: 500;
-    }
+.summary-row .value {
+    font-weight: 500;
+}
 
 /* Nút mua hàng */
 .btn-pink {
     width: 100%;
-    background-color: #f5a8a8;
+    background-color: #F7858F;
     color: white;
     border: none;
     padding: 12px;
@@ -146,25 +162,35 @@ h2 {
     margin-top: 10px;
 }
 
-    .btn-pink:hover {
-        background-color: #e18a8a;
-    }
-
-/* Nút thêm vào giỏ (nếu dùng chung) */
-.btn-add-to-cart {
-    color: #F7858F;
-    background-color: transparent;
-    border: 1px solid #F7858F;
-    border-radius: 4px;
-    padding: 8px 16px;
-    font-size: 14px;
-    cursor: pointer;
-    display: inline-flex;
-    align-items: center;
-    gap: 6px;
+.btn-pink:hover {
+    background-color: #e18a8a;
 }
 
-/* Khi giỏ hàng trống */
+.btn-add-to-cart {
+    background-color: white;
+    border: 3px solid #F7858F !important;
+    color: #F7858F;
+    font-size: 15px;
+    padding: 16px;
+    border-radius: 4px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 6px;
+    width: 270px;
+    height: 40px;
+    margin-top: 22px;
+}
+
+.btn-add-to-cart i {
+    font-size: 15px;
+    color: #F7858F;
+}   
+.summary-row {
+   margin-top: 30px;
+}
 .empty-cart {
     font-size: 18px;
     color: #999;
