--- a/ProjectCDTT_63132701/Content/qlsp.css
+++ b/ProjectCDTT_63132701/Content/qlsp.css
@@ -4,7 +4,9 @@
     margin-top: 30px;
     margin-bottom: 20px;
 }
-
+.table.table-bordered {
+    margin-bottom: 50px;
+}
 .center-button {
     text-align: left;
     margin-bottom: 20px;
