--- a/ProjectCDTT_63132701/Views/don_hang/Edit.cshtml
+++ b/ProjectCDTT_63132701/Views/don_hang/Edit.cshtml
@@ -4,72 +4,66 @@
     ViewBag.Title = "Edit";
     Layout = "~/Views/shared/_LayoutAdmin.cshtml";
 }
-
-<h2>Edit</h2>
-
+<head>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="~/Content/details.css" />
+</head>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>DonHang</h4>
+
+    <div class="form-wrapper">
+        <a href="javascript:history.back()" class="back-button">
+            <i class="fa-solid fa-chevron-left"></i> Quay lại
+        </a>
+        <h2 class="form-title">Chỉnh sửa thông tin đơn hàng</h2>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.MaDH)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.MaKH, "MaKH", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("MaKH", null, htmlAttributes: new { @class = "form-control" })
+        <div class="form-row">
+            <div class="form-group">
+                @Html.LabelFor(model => model.MaKH, "Mã khách hàng :", new { @class = "form-label" })
+              
+                <p>@Model.MaKH</p>
+                @Html.HiddenFor(model => model.MaKH) 
                 @Html.ValidationMessageFor(model => model.MaKH, "", new { @class = "text-danger" })
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.TongTien, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="form-group">
+                @Html.LabelFor(model => model.TongTien, "Tổng tiền :", new { @class = "form-label" })
                 @Html.EditorFor(model => model.TongTien, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TongTien, "", new { @class = "text-danger" })
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.TrangThai, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TrangThai, new { htmlAttributes = new { @class = "form-control" } })
+            <div class="form-group">
+                @Html.LabelFor(model => model.TrangThai, "Trạng thái :", new { @class = "form-label" })
+                <!-- Trạng thái sử dụng dropdown -->
+                @Html.DropDownListFor(model => model.TrangThai, new SelectList(new[] { "Pending", "Paid", "Failed" }), new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.TrangThai, "", new { @class = "text-danger" })
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.NgayTao, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="form-group">
+                @Html.LabelFor(model => model.NgayTao, "Ngày tạo :", new { @class = "form-label" })
                 @Html.EditorFor(model => model.NgayTao, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.NgayTao, "", new { @class = "text-danger" })
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.MaVanDon, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="form-group">
+                @Html.LabelFor(model => model.MaVanDon, "Mã vận đơn :", new { @class = "form-label" })
                 @Html.EditorFor(model => model.MaVanDon, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.MaVanDon, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+        <div class="form-row">
+            <div class="col-md-10 offset-md-2">
+                <input type="submit" value="Lưu" class="btn btn-submit" />
             </div>
         </div>
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
 }
