--- a/ProjectCDTT_63132701/Views/van_chuyen/Create.cshtml
+++ b/ProjectCDTT_63132701/Views/van_chuyen/Create.cshtml
@@ -1,57 +1,69 @@
 ﻿@model ProjectCDTT_63132701.Models.VanChuyen
 
 @{
-    ViewBag.Title = "Tạo đơn vận chuyển";
+    ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Create Shipping</h2>
+<head>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="~/Content/create.css" />
+</head>
+
+
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <div class="form-group">
-            <label>Tỉnh thành phố</label>
-            <select id="tinhThanh" class="form-control"></select>
+<div class="form-wrapper">
+    <a href="javascript:history.back()" class="back-button">
+        <i class="fa-solid fa-chevron-left"></i> Quay lại
+    </a>
+    <h2 class="form-title">Tạo đơn vận chuyển</h2>
+    <div class="form-row">
+
+
+
+
+
+        <div class="form-group" style="flex: 1;">
+            <div class="form-group">
+                <label>Tỉnh/Thành phố :</label>
+                <select id="tinhThanh" class="form-control"></select>
+            </div>
+
+            <div class="form-group">
+                <label>Quận/Huyện :</label>
+                <select id="quanHuyen" class="form-control"></select>
+            </div>
+
+            <div class="form-group">
+                <label>Phường/Xã :</label>
+                <select id="phuongXa" class="form-control"></select>
+            </div>
+
+            <input type="hidden" name="TinhThanh" id="inputTinhThanh" />
+            <input type="hidden" name="QuanHuyen" id="inputQuanHuyen" />
+            <input type="hidden" name="PhuongXa" id="inputPhuongXa" />
         </div>
-        <div class="form-group">
-            <label>Quận huyện</label>
-            <select id="quanHuyen" class="form-control"></select>
-        </div>
-        <div class="form-group">
-            <label>Phường xã</label>
-            <select id="phuongXa" class="form-control"></select>
-        </div>
-
-        <input type="hidden" name="TinhThanh" id="inputTinhThanh" />
-        <input type="hidden" name="QuanHuyen" id="inputQuanHuyen" />
-        <input type="hidden" name="PhuongXa" id="inputPhuongXa" />
-
-
-
-
-        <div class="form-group">
-            @Html.Label("Đơn vị vận chuyển", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+        <div class="form-group" style="flex: 1; margin-right: 20px;">
+            <div class="form-group">
+                @Html.Label("Đơn vị vận chuyển :")
                 @Html.DropDownListFor(model => model.DonViVanChuyen, (SelectList)ViewBag.DonViVanChuyenList, "-- Chọn đơn vị --", new { @class = "form-control" })
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.GiaVanChuyen, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="form-group" style="margin-top: 15px;">
+                @Html.LabelFor(model => model.GiaVanChuyen, "Giá vận chuyển :")
                 @Html.TextBoxFor(model => model.GiaVanChuyen, new { @class = "form-control", placeholder = "vd: 20000" })
             </div>
         </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-warning" />
-            </div>
-        </div>
     </div>
+
+    <button type="submit" class="btn-submit">Tạo đơn vận chuyển</button>
+</div>
+}
 }
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
