--- a/ProjectCDTT_63132701/Views/van_chuyen/Details.cshtml
+++ b/ProjectCDTT_63132701/Views/van_chuyen/Details.cshtml
@@ -4,7 +4,11 @@
     ViewBag.Title = "Details";
     Layout = "~/Views/shared/_LayoutAdmin.cshtml";
 }
-
+<head>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="~/Content/create.css" />
+</head>
 <h2>Details</h2>
 
 <div>
