--- a/ProjectCDTT_63132701/Views/Van_chuyen/QLVC.cshtml
+++ b/ProjectCDTT_63132701/Views/Van_chuyen/QLVC.cshtml
@@ -41,13 +41,13 @@
                 <td>@Html.DisplayFor(modelItem => item.DonViVanChuyen)</td>
                 <td>@Html.DisplayFor(modelItem => item.GiaVanChuyen)</td>
                 <td>
-                    <a href="@Url.Action("Details", new { id = item.MaDH })" class="btn btn-info btn-sm">
+                    <a href="@Url.Action("Details", new { id = item.MaVanChuyen})" class="btn btn-info btn-sm">
                         <i class="fas fa-eye"></i>
                     </a>
-                    <a href="@Url.Action("Edit", new { id = item.MaDH })" class="btn btn-warning btn-sm">
+                    <a href="@Url.Action("Edit","Van_chuyen" , new { id = item.MaVanChuyen })" class="btn btn-warning btn-sm">
                         <i class="fas fa-edit"></i>
                     </a>
-                    <a href="@Url.Action("Delete", new { id = item.MaDH })" class="btn btn-danger btn-sm" onclick="return confirm('Bạn có chắc muốn xóa sản phẩm này?');">
+                    <a href="@Url.Action("Delete", new { id = item.MaVanChuyen })" class="btn btn-danger btn-sm" onclick="return confirm('Bạn có chắc muốn xóa sản phẩm này?');">
                         <i class="fas fa-trash"></i>
                     </a>
                 </td>
