--- a/ProjectCDTT_63132701/Views/don_hang/Delete.cshtml
+++ b/ProjectCDTT_63132701/Views/don_hang/Delete.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bạn có chắc chắn muốn xóa đơn hàng này?</h3>
 <div>
     <h4>DonHang</h4>
     <hr />
