--- a/ProjectCDTT_63132701/Views/van_chuyen/Edit.cshtml
+++ b/ProjectCDTT_63132701/Views/van_chuyen/Edit.cshtml
@@ -75,9 +75,9 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "QLVC")
 </div>
 
-@section Scripts {
+@*@section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-}
+}*@
